--- a/TestingCoreDat/Base.lproj/Main.storyboard
+++ b/TestingCoreDat/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="mainViewController" id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
@@ -15,11 +15,110 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="p5L-ig-54V">
+                                <rect key="frame" x="282" y="193" width="36" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rRU-8o-xHX">
+                                <rect key="frame" x="262" y="260" width="76" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ucI-Df-TKK">
+                                <rect key="frame" x="252" y="222" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="lUV-F4-GIH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Yqh-0C-1CP">
+                                <rect key="frame" x="252" y="289" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="Ksd-7v-EBg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8al-Zv-VT2">
+                                <rect key="frame" x="281" y="338" width="38" height="30"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="loginButtonAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="w5f-d7-lqR"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ucI-Df-TKK" firstAttribute="top" secondItem="p5L-ig-54V" secondAttribute="bottom" constant="8" id="7dL-Xn-cV5"/>
+                            <constraint firstItem="rRU-8o-xHX" firstAttribute="top" secondItem="ucI-Df-TKK" secondAttribute="bottom" constant="8" id="Bc9-On-b7O"/>
+                            <constraint firstAttribute="centerX" secondItem="ucI-Df-TKK" secondAttribute="centerX" id="FuQ-Ru-cXt"/>
+                            <constraint firstItem="Yqh-0C-1CP" firstAttribute="top" secondItem="rRU-8o-xHX" secondAttribute="bottom" constant="8" id="KyK-5o-uSS"/>
+                            <constraint firstItem="p5L-ig-54V" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="173" id="MWd-sR-ohj"/>
+                            <constraint firstAttribute="centerX" secondItem="p5L-ig-54V" secondAttribute="centerX" id="SK9-LN-txc"/>
+                            <constraint firstAttribute="centerX" secondItem="Yqh-0C-1CP" secondAttribute="centerX" id="cyi-ke-cnI"/>
+                            <constraint firstAttribute="centerX" secondItem="rRU-8o-xHX" secondAttribute="centerX" id="rg5-bO-V8s"/>
+                            <constraint firstItem="8al-Zv-VT2" firstAttribute="top" secondItem="Yqh-0C-1CP" secondAttribute="bottom" constant="19" id="tMQ-61-56Z"/>
+                            <constraint firstAttribute="centerX" secondItem="8al-Zv-VT2" secondAttribute="centerX" id="wrp-5E-0vD"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="passwordInput" destination="Yqh-0C-1CP" id="reW-2g-JjP"/>
+                        <outlet property="userInput" destination="ucI-Df-TKK" id="U5Z-Rd-ErC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--User Profile View Controller-->
+        <scene sceneID="pXx-B7-gZo">
+            <objects>
+                <viewController storyboardIdentifier="userProfile" id="eu3-H1-lZ9" customClass="UserProfileViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dlp-j7-W6o"/>
+                        <viewControllerLayoutGuide type="bottom" id="URg-iU-Urf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fdJ-dp-o5h">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="bxl-e9-CXg">
+                                <rect key="frame" x="0.0" y="20" width="600" height="530"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wGg-2C-dvS">
+                                <rect key="frame" x="276" y="560" width="49" height="30"/>
+                                <state key="normal" title="Logout">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="logoutButtonAction:" destination="eu3-H1-lZ9" eventType="touchUpInside" id="iul-9A-a9l"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="bxl-e9-CXg" firstAttribute="leading" secondItem="fdJ-dp-o5h" secondAttribute="leading" id="2yl-f1-7gY"/>
+                            <constraint firstItem="wGg-2C-dvS" firstAttribute="top" secondItem="bxl-e9-CXg" secondAttribute="bottom" constant="10" id="BnQ-u6-Xc5"/>
+                            <constraint firstAttribute="trailing" secondItem="bxl-e9-CXg" secondAttribute="trailing" id="HPr-Sb-rKq"/>
+                            <constraint firstItem="URg-iU-Urf" firstAttribute="top" secondItem="wGg-2C-dvS" secondAttribute="bottom" constant="10" id="Wnn-Y8-3eQ"/>
+                            <constraint firstItem="bxl-e9-CXg" firstAttribute="top" secondItem="fdJ-dp-o5h" secondAttribute="top" constant="20" id="btj-Wb-4WI"/>
+                            <constraint firstAttribute="centerX" secondItem="wGg-2C-dvS" secondAttribute="centerX" id="kDt-a9-Ktr"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="mainTableView" destination="bxl-e9-CXg" id="cSE-F0-skr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8rH-HQ-5ux" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1086" y="387"/>
         </scene>
     </scenes>
 </document>
